# rustfontrenderer

./: .gitignore  Cargo.toml  msdf-outline-fixes.md  msdf-phase1.md  msdf-phase2-review.md  msdf-phase2.md  slug-refactor.md
demo/: Cargo.toml
demo/src/: main.rs
demo_msdf/: Cargo.toml
demo_msdf/src/: main.rs
text/: Cargo.toml
text/src/: bands.rs  cache.rs  engine.rs  font.rs  layout.rs  lib.rs  linebreak.rs  outline.rs  renderer.rs  vertex.rs
text/src/shaders/: pixel.wgsl  vertex.wgsl
text_msdf/: Cargo.toml  build.rs  build_materials.rs  charset.txt
text_msdf/materials/: fill.wgsl  glow.wgsl  outline.wgsl  shadow.wgsl
text_msdf/src/: atlas.rs  atlas_format.rs  engine.rs  font.rs  layout.rs  lib.rs  linebreak.rs  rect_pack.rs  renderer.rs  vertex.rs
text_msdf/src/shaders/: pixel.wgsl  vertex.wgsl
torture/: Cargo.toml
torture/src/: main.rs
torture_msdf/: Cargo.toml
torture_msdf/src/: main.rs
