[package]
name = "text_msdf"
version = "0.1.0"
edition = "2021"
description = "MSDF glyph atlas renderer mirroring text crate TextEngine API"

[lib]
path = "src/lib.rs"

[dependencies]
wgpu       = { workspace = true }
ttf-parser = { workspace = true }
rustybuzz  = { workspace = true }
bytemuck   = { workspace = true }
glam       = { workspace = true }
png        = "0.17"
bincode    = "1.3"
serde      = { version = "1", features = ["derive"] }

[build-dependencies]
ttf-parser = { workspace = true }
rustybuzz  = { workspace = true }
fdsm = "0.8"
fdsm-ttf-parser = "0.2"
image      = { version = "0.25", default-features = false }
nalgebra   = "0.34"
png        = "0.17"
bincode    = "1.3"
blake3     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
